# mcp_adv_bench

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
datasets/fetch-html/: scenarios.yml
datasets/fetch-html/mcp/: README.md  manifest.json  pyproject.toml
datasets/fetch-html/mcp/server/: main.py
docs/: dataset-template.md  evaluation-system.md
eval/: eval_config.json  main.py  mcp_config.json  requirements.txt
eval/core/: __init__.py  config_manager.py  llm_factory.py  loader.py  reporter.py
eval/core/executor/: __init__.py  base.py  evaluator.py  history.py  mcp_manager.py  runner.py
eval/models/: __init__.py  scenario.py
eval/results/fetch-html/: report_20250808_133445.json  report_20250808_134748.json
