[project]
name = "mcp-adv-bench"
version = "0.1.0"
description = "MCP Adversarial Benchmark - Security research framework for Model Context Protocol"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "mcp-use>=1.3.8",
    "anthropic>=0.39.0",
    "python-dotenv>=1.1.1",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.3.18",
    "langchain-google-genai>=2.0.0",
    "google-generativeai>=0.8.4",
    "langchain-core>=0.3.0",
    "pydantic>=2.0.0",
]

[tool.setuptools]
packages = ["eval", "datasets"]
