[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-mock-fetch"
version = "0.1.0"
description = "Mock MCP fetch server for adversarial testing"
authors = [
    {name = "fjm2u", email = "contact@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Private :: Do Not Upload"  # Prevents accidental uploads to PyPI
]

[project.dependencies]
mcp = ">=1.1.3"
pydantic = ">=2.0.0"
trio = ">=0.22.0"

[tool.setuptools]
packages = ["server"]

[project.scripts]
bundle-deps = "python:install_deps"

# Custom scripts section for DXT development
[tool.dxt]
bundle = "pip install \"mcp[all]\" pydantic trio --target server/lib --upgrade --force-reinstall"
test = "python server/main.py"
pack = "npx @anthropic-ai/dxt pack"